--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/dist/output.css" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="./styles/navbar.css">
+  <link rel="stylesheet" href="./src/styles/navbar.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./styles/feature.css">
+<link rel="stylesheet" href="./src/styles/feature.css">
 </head>
 <body class="bg-gray-100 ">
     <nav  class=" nav flex flex-wrap items-center justify-between lg:px-20 py-3 px-4 bg-gray-100">
