--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 </section>
 <section class="mt-24 bg-red-500 py-14">
     <div class="lg:px-28 px-5 container grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 gap-x-2  gap-y-2  mx-auto ">
-        <div class="rounded-xl flex h-96 flex-col text-center align-center justify-center bg-gray-100 transition-all shadow-lg hover:shadow-2xl cursor-pointer hover:translate-y-[-10px]">
+        <div class="rounded-xl flex  lg:py-0 py-14 flex-col text-center align-center justify-center bg-gray-100 transition-all shadow-lg hover:shadow-2xl cursor-pointer hover:translate-y-[-10px]">
             <div class="text-center">
                 <img class="w-20 inline" src="../public/icons/groups_black_24dp.svg" alt="">                    
               </div>
@@ -250,7 +250,7 @@
                     <p>Our company is blessed with a proficient team. The team consists of highly skilled artisans, marketing personnel, well-qualified engineers, etc. who are well versed with their jobs. The unmatched services offered by our supplying team have earned us a huge list of clients from the National and International Market.</p>
               </div>
         </div>
-        <div class="rounded-xl flex h-96 flex-col text-center align-center justify-center bg-gray-100 transition-all shadow-lg hover:shadow-2xl cursor-pointer hover:translate-y-[-10px]">
+        <div class="rounded-xl flex lg:py-0 py-14 flex-col text-center align-center justify-center bg-gray-100 transition-all shadow-lg hover:shadow-2xl cursor-pointer hover:translate-y-[-10px]">
             <div class="text-center">
                 <img class="w-20 inline" src="../public/icons/category_black_24dp.svg" alt="">                    
               </div>
@@ -263,7 +263,7 @@
                  </p>
               </div>
         </div>
-        <div class="rounded-xl flex h-96 flex-col text-center align-center justify-center bg-gray-100 transition-all shadow-lg hover:shadow-2xl cursor-pointer hover:translate-y-[-10px]">
+        <div class="rounded-xl flex lg:py-0 py-14 flex-col text-center align-center justify-center bg-gray-100 transition-all shadow-lg hover:shadow-2xl cursor-pointer hover:translate-y-[-10px]">
             <div class="text-center">
                 <img class="w-20 inline" src="../public/icons/public_black_24dp.svg" alt="">                    
               </div>
