--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <section id="about" class="py-16 bg-gray-200  pt-30">
         <div class="container flex lg:justify-between justify-center items-center mx-auto lg:flex-row flex-col lg:px-24 px-0">
             <div class="lg:w-3/6 lg:px-0 px-3 lg:mr-10 mr-0">
-                <img class=" rounded-lg" src="https://images.unsplash.com/photo-1611486212355-d276af4581c0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="">
+                <img class="shadow-sm rounded-lg" src="https://images.unsplash.com/photo-1611486212355-d276af4581c0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="">
             </div>
             <div class="lg:w-4/6 w-full lg:mt-0 mt-4">
                 <div class="lg:px-0 px-5">
@@ -239,7 +239,7 @@
 </section>
 <section class="mt-24 bg-red-500 py-14">
     <div class="lg:px-28 px-5 container grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 gap-x-2  gap-y-2  mx-auto ">
-        <div class="rounded-xl flex  lg:py-0 py-14 flex-col text-center align-center justify-center bg-gray-100 transition-all shadow-lg hover:shadow-2xl cursor-pointer hover:translate-y-[-10px]">
+        <div class="rounded-xl flex  lg:py-10 py-14 flex-col text-center align-center justify-center bg-gray-100 transition-all shadow-lg hover:shadow-2xl cursor-pointer hover:translate-y-[-10px]">
             <div class="text-center">
                 <img class="w-20 inline" src="../public/icons/groups_black_24dp.svg" alt="">                    
               </div>
@@ -250,7 +250,7 @@
                     <p>Our company is blessed with a proficient team. The team consists of highly skilled artisans, marketing personnel, well-qualified engineers, etc. who are well versed with their jobs. The unmatched services offered by our supplying team have earned us a huge list of clients from the National and International Market.</p>
               </div>
         </div>
-        <div class="rounded-xl flex lg:py-0 py-14 flex-col text-center align-center justify-center bg-gray-100 transition-all shadow-lg hover:shadow-2xl cursor-pointer hover:translate-y-[-10px]">
+        <div class="rounded-xl flex lg:py-10 py-14 flex-col text-center align-center justify-center bg-gray-100 transition-all shadow-lg hover:shadow-2xl cursor-pointer hover:translate-y-[-10px]">
             <div class="text-center">
                 <img class="w-20 inline" src="../public/icons/category_black_24dp.svg" alt="">                    
               </div>
@@ -263,7 +263,7 @@
                  </p>
               </div>
         </div>
-        <div class="rounded-xl flex lg:py-0 py-14 flex-col text-center align-center justify-center bg-gray-100 transition-all shadow-lg hover:shadow-2xl cursor-pointer hover:translate-y-[-10px]">
+        <div class="rounded-xl flex lg:py-10 py-14 flex-col text-center align-center justify-center bg-gray-100 transition-all shadow-lg hover:shadow-2xl cursor-pointer hover:translate-y-[-10px]">
             <div class="text-center">
                 <img class="w-20 inline" src="../public/icons/public_black_24dp.svg" alt="">                    
               </div>
